# Synapse

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
docs/screenshots/: .gitkeep
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  build.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Backlinks.tsx  Breadcrumbs.tsx  BulkActionBar.tsx  CalendarView.tsx  CaptureWindow.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CoverPicker.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  FavoritesSection.tsx  FilesView.tsx  FolderTree.tsx  GraphView.tsx  ImageLightbox.tsx  ImagesView.tsx  InboxView.tsx  LanguageProvider.tsx  LocalGraph.tsx  Modal.tsx  MoodPicker.tsx  NavSection.tsx  NoteCard.tsx  NoteHero.tsx  NotesGallery.tsx  Placeholder.tsx  PromptDialog.tsx  SettingsView.tsx  Sidebar.tsx  TagsView.tsx  TemplatePicker.tsx  Toaster.tsx  TrashPreviewModal.tsx  TrashView.tsx  UnlinkedMentions.tsx  VersionHistory.tsx  WikiLinkPicker.tsx  WritingDashboard.tsx
src/editor2026/: Editor2026.tsx  LocalGraphWebGL.tsx  TemplateChipRow.tsx  backlinks.ts  graphModel.ts  loadDocument.ts  schema.ts  useLocalGraph.ts  wikiLink2026.ts
src/hooks/: useSelection.ts
src/lib/: backup.ts  buildGraph.ts  caldav.ts  clusterHull.ts  cn.ts  coverGallery.ts  covers.ts  daily.ts  dnd.ts  emojiData.ts  export.ts  folderColors.ts  forceLayout.ts  (+23 more)
(+36 files in other folders)
