[package]
name = "synapse"
version = "0.1.1"
description = "Personal Notion-like notes with Obsidian-style graph"
authors = ["Kirill"]
edition = "2021"

[lib]
name = "synapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Read-only iCalendar (.ics) fetch for calendar sync. Done in Rust so the
# request isn't subject to the webview's CORS policy. native-tls uses schannel
# on Windows (no OpenSSL); gzip handles compressed ICS exports.
reqwest = { version = "0.12", features = ["gzip"] }
